--- a/main.html
+++ b/main.html
@@ -68,8 +68,8 @@ img {
 </head>
 <body>
     <img src="wzor123.png">
-    <img class="flag" src="flag-ezgif.com-crop (1).gif">
-    <img class="orzel" src="orzel-ezgif.com-crop (1).gif">
+    <img class="flag" src="flag-ezgif.com-crop_1.gif">
+    <img class="orzel" src="orzel-ezgif.com-crop_1.gif">
     <div class="timer"></div>
     <script>
         function updateClock() {
